text on mobile not visible fix 3

--- a/main.css
+++ b/main.css
@@ -167,7 +167,6 @@ p {
   }
 
   .grid-item-text {
-    bottom: -20%;
     left: 50%;
     transform: translateX(-50%);
     color: #c1a05a;
@@ -190,7 +189,7 @@ p {
   }
 
   .grid-item:hover .grid-item-text {
-    opacity: 1;
+    opacity: 0;
     text-shadow: 0px 1px 1px #333;
     bottom: -20%;
   }
